--- a/android-text-chat/text-chat-sample-app/src/main/AndroidManifest.xml
+++ b/android-text-chat/text-chat-sample-app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.opentok.android.im.sample">
+    package="com.opentok.android.textchat.sample">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.opentok.android.im.sample.MainActivity"
+            android:name="com.opentok.android.textchat.sample.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
