Adding aar name

--- a/android-text-chat/text-chat-component/build.gradle
+++ b/android-text-chat/text-chat-component/build.gradle
@@ -9,11 +9,23 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        project.archivesBaseName = "opentok-text-chat"
+        project.version = "1.0"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    libraryVariants.all { variant ->
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            if (outputFile != null && outputFile.name.endsWith('.aar')) {
+                def fileName = "${archivesBaseName}-${version}.aar"
+                output.outputFile = new File(outputFile.parent, fileName)
+            }
         }
     }
 }
