--- a/android-text-chat/text-chat-sample-app/src/main/AndroidManifest.xml
+++ b/android-text-chat/text-chat-sample-app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name="com.opentok.android.textchat.sample.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
