Refactoring, renaming textchatfragment and textchatsample

--- a/android-text-chat/text-chat-component/src/main/AndroidManifest.xml
+++ b/android-text-chat/text-chat-component/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.opentok.android.textchat">
+    package="com.tokbox.android.textchat">
 
     <application
         android:allowBackup="true"
