--- a/android-text-chat/settings.gradle
+++ b/android-text-chat/settings.gradle
@@ -1,1 +1,1 @@
-include ':text-chat-component', ':text-chat-sample-app'
+include ':text-chat-component', ':text-chat-sample-app', ':opentok-text-chat-1.0', ':TextChatSample'
