--- a/iOS-text-chat/OneToOneTextChatSample/Podfile
+++ b/iOS-text-chat/OneToOneTextChatSample/Podfile
@@ -3,6 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '9.0'
 inhibit_all_warnings!
 
-target 'OneToOneSample' do 
+target 'OneToOneTextChatSample' do 
   pod 'OpenTok'
 end
