--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile project(':opentok-android-sdk-2.7.0')
+    compile project(':android-acc-pack')
+    compile project(':opentok-text-chat-acc-pack-1.0')
 }
