--- a/js-text-chat/opentok.js-text-chat/package.json
+++ b/js-text-chat/opentok.js-text-chat/package.json
@@ -24,6 +24,10 @@
     "gulp-amdclean": "^1.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-docco": "0.0.4",
+    "gulp-if": "^2.0.0",
+    "gulp-import-css": "^0.1.2",
+    "gulp-inline-css": "^3.1.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
     "gulp-yuidoc": "^0.1.2",
     "karma": "^0.13.10",
