--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "logging.android.opentok.com.textchatsample"
+        applicationId "com.tokbox.android.textchatsample"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -35,7 +35,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile project(':opentok-android-sdk-2.7.0')
+    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
     compile project(':android-acc-pack')
     compile project(':opentok-text-chat-acc-pack-1.0')
 }
