--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -27,6 +27,11 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/notice.txt'
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -36,4 +41,6 @@ dependencies {
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile project(':android-acc-pack')
+    compile project(':text-chat-acc-pack')
 }
