--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        //multiDexEnabled true
     }
     buildTypes {
         release {
@@ -30,10 +31,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    //compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    //compile files('opentok-android-sdk-2.7.0.jar')
+    compile project(':android-acc-pack')
+    //compile project(':opentok-text-chat-acc-pack-1.0')
+    compile project(':text-chat-acc-pack')
 }
