--- a/android-text-chat/text-chat-acc-pack/build.gradle
+++ b/android-text-chat/text-chat-acc-pack/build.gradle
@@ -27,6 +27,9 @@ android {
             }
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -36,4 +39,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
     compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile project(path: ':android-acc-pack')
+    //provided project(':opentok-android-sdk-2.7.0')
 }
