Adding changes to update sdk version

--- a/android-text-chat/settings.gradle
+++ b/android-text-chat/settings.gradle
@@ -1,1 +1,1 @@
-include ':text-chat-acc-pack', ':TextChatSample'
+include ':text-chat-acc-pack', ':TextChatSample', ':opentok-android-accelerator-pack-1.0'
