--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile project(':text-chat-acc-pack')
+    compile project(':opentok-android-accelerator-pack-1.0')
 }
