--- a/android-text-chat/text-chat-acc-pack/build.gradle
+++ b/android-text-chat/text-chat-acc-pack/build.gradle
@@ -8,9 +8,9 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "0.9"
         project.archivesBaseName = "opentok-text-chat-acc-pack"
-        project.version = "1.0"
+        project.version = "0.9"
     }
     buildTypes {
         release {
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile 'com.opentok.android:opentok-android-sdk:2.8.1-REL-1736'
+    compile project(':opentok-android-accelerator-pack-1.0')
 }
