--- a/android-text-chat/TextChatSample/src/main/AndroidManifest.xml
+++ b/android-text-chat/TextChatSample/src/main/AndroidManifest.xml
@@ -14,12 +14,13 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/AppTheme.ActionBar.Transparent"
         android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name="com.tokbox.android.textchatsample.MainActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
