--- a/js-text-chat/opentok.js-text-chat/package.json
+++ b/js-text-chat/opentok.js-text-chat/package.json
@@ -30,6 +30,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
     "gulp-yuidoc": "^0.1.2",
+    "gulp-zip": "^3.2.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
