--- a/android-text-chat/settings.gradle
+++ b/android-text-chat/settings.gradle
@@ -1,3 +1,3 @@
-include ':text-chat-acc-pack', ':TextChatSample', ':android-acc-pack'
+include ':text-chat-acc-pack', ':TextChatSample', ':opentok-android-accelerator-pack-1.0'
 
 
