Updating sdk dep

--- a/android/android-accelerator-pack/acceleratorpack/build.gradle
+++ b/android/android-accelerator-pack/acceleratorpack/build.gradle
@@ -34,7 +34,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     testCompile 'junit:junit:4.+'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.1-REL-1736'
+    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
 }
 
 if (project.hasProperty("MAVEN_USERNAME") && project.hasProperty("MAVEN_PASSWORD")) {
