--- a/android-text-chat/text-chat-acc-pack/build.gradle
+++ b/android-text-chat/text-chat-acc-pack/build.gradle
@@ -65,6 +65,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.1-REL-1736'
-    compile project(':opentok-android-accelerator-pack-1.0')
+    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
 }
