--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     compile 'com.android.support:design:23.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile project(':text-chat-acc-pack')
-    compile project(':opentok-android-accelerator-pack-1.0')
+    compile 'com.opentok.android:accelerator-pack:1.0'
 }
