--- a/android-text-chat/TextChatSample/build.gradle
+++ b/android-text-chat/TextChatSample/build.gradle
@@ -10,7 +10,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -37,8 +39,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23.+'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile project(':text-chat-acc-pack')
     compile 'com.opentok.android:accelerator-pack:1.0'
