Updating plugin version

--- a/android-text-chat/TextChatSample/src/main/AndroidManifest.xml
+++ b/android-text-chat/TextChatSample/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name="com.tokbox.android.textchatsample.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:windowSoftInputMode="stateVisible|adjustResize">
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
