--- a/js-text-chat/opentok.js-text-chat/package.json
+++ b/js-text-chat/opentok.js-text-chat/package.json
@@ -41,6 +41,7 @@
     "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.0",
-    "yuidocjs": "^0.9.0"
+    "yuidocjs": "^0.9.0",
+    "jasmine":"latest"
   }
 }
