--- a/js-text-chat/opentok.js-text-chat/package.json
+++ b/js-text-chat/opentok.js-text-chat/package.json
@@ -19,6 +19,11 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.0",
     "gulp-amd-optimizer": "^0.3.4",
     "gulp-amdclean": "^1.1.1",
