--- a/js-text-chat/sample-app/package.json
+++ b/js-text-chat/sample-app/package.json
@@ -4,8 +4,8 @@
   "description": "One to One sample app",
   "main": "server.js",
   "repository": {
-       "type": "git",
-       "url": "https://github.com/opentok/one-to-one-sample-apps"
+    "type": "git",
+    "url": "https://github.com/opentok/one-to-one-sample-apps"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1"
   }
 }
