--- a/JS/.eslintrc.json
+++ b/JS/.eslintrc.json
@@ -18,7 +18,8 @@
         "comma-dangle": 0,
         "func-names": 0,
         "prefer-arrow-callback": 0,
-        "object-shorthand": 0
+        "object-shorthand": 0,
+        "new-cap": [2, { "properties": false }]
     },
     "globals": {
         "$": true,
