--- a/android/android-screensharing-annotations/screensharing-acc-pack/src/main/AndroidManifest.xml
+++ b/android/android-screensharing-annotations/screensharing-acc-pack/src/main/AndroidManifest.xml
@@ -1,10 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="screensharing.accpack.android.tokbox.com.screensharing_acc_pack">
+    package="com.tokbox.android.accpack.screensharing">
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
+        <service android:name="com.tokbox.android.accpack.screensharing.services.ScreenSharingService" />
 
     </application>
 
