--- a/JS/.eslintrc.json
+++ b/JS/.eslintrc.json
@@ -19,7 +19,8 @@
         "func-names": 0,
         "prefer-arrow-callback": 0,
         "object-shorthand": 0,
-        "new-cap": [2, { "properties": false }]
+        "new-cap": [2, { "properties": false }],
+        "no-unused-expressions": [2, { "allowTernary": true }]
     },
     "globals": {
         "$": true,
