--- a/iOS/OneToOneScreenShareSample/Podfile
+++ b/iOS/OneToOneScreenShareSample/Podfile
@@ -3,6 +3,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 inhibit_all_warnings!
 
-target 'OneToOneScreenShareSample' do 
+target 'OneToOneScreenShareSample' do
+  pod 'OpenTok'
   pod 'OTAcceleratorPackUtil'
+  pod 'SVProgressHUD'
 end
