--- a/android/android-screensharing-annotations/annotations-acc-pack/src/main/AndroidManifest.xml
+++ b/android/android-screensharing-annotations/annotations-acc-pack/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <service android:name="com.tokbox.android.accpack.annotations.services.AnnotationsService" />
+
     </application>
 
 </manifest>
