Work in progress

--- a/iOS/ScreenShareSample/Podfile
+++ b/iOS/ScreenShareSample/Podfile
@@ -1,7 +1,10 @@
 platform :ios, '8.0'
 
-target 'ScreenShareKit' do 
+target 'ScreenShareKit' do
   pod 'OTAcceleratorPackUtil'
   pod 'LHToolbar', '1.2.1-beta'
 end
 
+target 'ScreenShareSample' do
+  pod 'OTAcceleratorPackUtil'
+end
