--- a/android/android-screensharing-annotations/screensharing-acc-pack/build.gradle
+++ b/android/android-screensharing-annotations/screensharing-acc-pack/build.gradle
@@ -21,8 +21,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:design:23.+'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'com.opentok.android:accelerator-pack:1.0'
+    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
+    compile project(':annotations-acc-pack')
 }
