--- a/android/android-screensharing-annotations/SampleApp/src/main/AndroidManifest.xml
+++ b/android/android-screensharing-annotations/SampleApp/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.ActionBar.Transparent"
+        android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher">
 
         <activity
