--- a/js-text-chat/.eslintrc.json
+++ b/js-text-chat/.eslintrc.json
@@ -18,7 +18,8 @@
         "comma-dangle": 0,
         "func-names": 0,
         "prefer-arrow-callback": 0,
-        "object-shorthand": 0
+        "object-shorthand": 0,
+        "no-unused-expressions": [2, { "allowTernary": true, "allowShortCircuit": true }]
     },
     "globals": {
         "$": true,
