--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "One to One sample app",
   "main": "server.js",
   "repository": {
-       "type": "git",
-       "url": "https://github.com/opentok/one-to-one-sample-apps"
+    "type": "git",
+    "url": "https://github.com/opentok/one-to-one-sample-apps"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,8 @@
   "author": "adrice727@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4"
+    "ejs": "^2.4.2",
+    "express": "^4.13.4",
+    "opentok": "^2.3.2"
   }
 }
