--- a/JS/.eslintrc.json
+++ b/JS/.eslintrc.json
@@ -20,7 +20,7 @@
         "prefer-arrow-callback": 0,
         "object-shorthand": 0,
         "new-cap": [2, { "properties": false }],
-        "no-unused-expressions": [2, { "allowTernary": true }]
+        "no-unused-expressions": [2, { "allowTernary": true, "allowShortCircuit": true }]
     },
     "globals": {
         "$": true,
