change configurations that are acceptable to App Store

--- a/iOS/OneToOneScreenShareSample/OneToOneScreenShareSample/Info.plist
+++ b/iOS/OneToOneScreenShareSample/OneToOneScreenShareSample/Info.plist
@@ -38,5 +38,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 </dict>
 </plist>
