--- a/android/OneToOneTextChatSample/app/build.gradle
+++ b/android/OneToOneTextChatSample/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile 'com.opentok.android:accelerator-pack:1.0'
 }
