--- a/android/AnnotationsKit/annotations-kit/build.gradle
+++ b/android/AnnotationsKit/annotations-kit/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 23
@@ -20,6 +21,7 @@ android {
     }
 
     libraryVariants.all { variant ->
+
         variant.outputs.each { output ->
             def outputFile = output.outputFile
             if (outputFile != null && outputFile.name.endsWith('.aar')) {
@@ -27,7 +29,69 @@ android {
                 output.outputFile = new File(outputFile.parent, fileName)
             }
         }
+
+        def javadoc = task("generateJavaDoc${variant.name.capitalize()}", type: Javadoc, dependsOn: "generate${variant.name.capitalize()}Sources") {
+            source = 'src/main/java'
+            classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+            destinationDir = file("build/outputs/docs/")
+            title = 'OpenTok Android Annotations'
+            exclude "**/config/**"
+            exclude "**/logging/**"
+        }
+
+        def zipBundle = task("zipBundle${variant.name.capitalize()}", type: Zip) {
+            from ('build/outputs')
+            include '**/aar/**'
+            include '**/docs/**'
+            exclude '**/lint-results-debug_files/**'
+            destinationDir = file(".")
+            archiveName = "${archivesBaseName}-${version}.zip"
+        }
+
+        zipBundle.dependsOn build
+        zipBundle.dependsOn javadoc
+
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+}
+
+if (project.hasProperty("MAVEN_USERNAME") && project.hasProperty("MAVEN_PASSWORD")) {
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: "https://api.bintray.com/maven/tokbox/maven/${ARTIFACT_ID}/;publish=1") {
+                    authentication(userName: MAVEN_USERNAME ? MAVEN_USERNAME : "", password: MAVEN_PASSWORD ? MAVEN_PASSWORD : "")
+                }
+                def (revision, buildTime) = getRevisionAndTime()
+                pom.version = "${version}"
+                pom.groupId = 'com.opentok.android'
+                pom.artifactId = "${ARTIFACT_ID}"
+            }
+        }
+    }
+}
+
+def checkMaven = task("checkUploadArchivesDeps") {
+    doFirst {
+        if (!project.hasProperty("MAVEN_USERNAME")) {
+            throw new GradleException("MAVEN_USERNAME Property not defined")
+        }
+        if (!project.hasProperty("MAVEN_PASSWORD")) {
+            throw new GradleException("MAVEN_PASSWORD Property not defined")
+        }
+    }
+}
+
+uploadArchives.dependsOn checkMaven
+
+def getRevisionAndTime() {
+    def date = new Date()
+    def hash = 'git rev-parse --verify HEAD'.execute().text.trim()
+    TimeZone.setDefault(TimeZone.getTimeZone('PST'))
+    def formattedDate = date.format('yyyyMMddHHmmss')
+    return ["${hash}".toString(), formattedDate.toString()]
 }
 
 dependencies {
