--- a/android/AnnotationsKit/gradle.properties
+++ b/android/AnnotationsKit/gradle.properties
@@ -16,3 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MAVEN_USERNAME=
+MAVEN_PASSWORD=
+ARTIFACT_ID=opentok-annotations
