--- a/android/OneToOneTextChatSample/app/build.gradle
+++ b/android/OneToOneTextChatSample/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.opentok.android:accelerator-pack:1.0'
+    compile 'com.opentok.android:opentok-android-sdk:2.8+'
     compile 'com.opentok.android:opentok-solutions-logging:1.0.0'
 }
