--- a/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
+++ b/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 23
@@ -21,6 +22,10 @@ android {
 
     lintOptions {
         abortOnError false
+    }
+
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
     }
 
     libraryVariants.all { variant ->
@@ -103,8 +108,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
-    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
-    compile 'com.opentok.android:accelerator-pack:1.0'
+    compile 'com.opentok.android:accelerator-pack:1.0.0'
     compile 'com.opentok.android:opentok-solutions-logging:1.0.0'
 }
