--- a/iOS/Example/Podfile
+++ b/iOS/Example/Podfile
@@ -1,9 +1,10 @@
-target 'OTAcceleratorPackUtil_Example', :exclusive => true do
-  pod 'OTAcceleratorPackUtil', :path => '../'
-end
 
-target 'OTAcceleratorPackUtil_Tests', :exclusive => true do
+target 'OTAcceleratorPackUtil_Example' do
   pod 'OTAcceleratorPackUtil', :path => '../'
 
-  pod 'Kiwi'
+  target 'OTAcceleratorPackUtil_Tests' do
+    inherit! :search_paths
+
+    pod 'Kiwi'
+  end
 end
