update iOS logging using the new logger

--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,8 +1,5 @@
 .DS_Store
-
-# Xcode
-/build/*
-*/build/*
+build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -11,10 +8,19 @@
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 xcuserdata
 profile
 *.moved-aside
 DerivedData
+*.xcdatamodeld
 .idea/
-*.hmap
-*.xccheckout
+# Pods - for those of you who use CocoaPods
+Pods
+
+*.framework
+*.bundle
+
+OneToOneTextChatSample/OneToOneTextChatSample.xcodeproj/project.*
+TextChatAccPackKit/OTTextChatAccPackKit.xcodeproj/project.*
