--- a/ios/TextChatAccPackKit/Podfile
+++ b/ios/TextChatAccPackKit/Podfile
@@ -2,6 +2,7 @@ platform :ios, '8.0'
 
 target 'OTTextChatKit' do 
   pod 'OTAcceleratorPackUtil'
+  pod 'OTKAnalytics'
 end
 
 target 'OTTextChatKitTests' do 
