--- a/android/ScreensharingAccPackKit/screensharing-acc-pack-kit/build.gradle
+++ b/android/ScreensharingAccPackKit/screensharing-acc-pack-kit/build.gradle
@@ -35,8 +35,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
-    compile 'com.opentok.android:accelerator-pack:1.0'
-    compile 'com.opentok.android:opentok-android-sdk:2.8.+'
-    compile 'com.opentok.android:opentok-solutions-logging:+'
-    //compile project(':opentok-annotations-1.0.0')
+    compile 'com.opentok.android:opentok-annotations:1.0.0'
 }
