--- a/ios/TextChatAccPackKit/OTTextChatAccPackKit.xcodeproj/xcshareddata/xcschemes/OTTextChatKit copy.xcscheme
+++ b/ios/TextChatAccPackKit/OTTextChatAccPackKit.xcodeproj/xcshareddata/xcschemes/OTTextChatKit copy.xcscheme
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForAnalyzing = "YES"
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "YES">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
-               BuildableIdentifier = 'primary'
-               BlueprintIdentifier = '78E03309FA4B9CC1C2A38B7DA2E61F34'
-               BlueprintName = 'OTAcceleratorPackUtil'
-               ReferencedContainer = 'container:Pods.xcodeproj'
-               BuildableName = 'libOTAcceleratorPackUtil.a'>
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A0CFDF6A1D25041A00D8449B"
+               BuildableName = "OTTextChatKit.framework"
+               BlueprintName = "OTTextChatKit copy"
+               ReferencedContainer = "container:OTTextChatAccPackKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <Testables>
+      </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -38,17 +41,34 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      buildConfiguration = "Debug"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A0CFDF6A1D25041A00D8449B"
+            BuildableName = "OTTextChatKit.framework"
+            BlueprintName = "OTTextChatKit copy"
+            ReferencedContainer = "container:OTTextChatAccPackKit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      buildConfiguration = "Release"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A0CFDF6A1D25041A00D8449B"
+            BuildableName = "OTTextChatKit.framework"
+            BlueprintName = "OTTextChatKit copy"
+            ReferencedContainer = "container:OTTextChatAccPackKit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
