Update iOS and Android versions

--- a/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
+++ b/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
@@ -108,6 +108,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
-    compile 'com.opentok.android:accelerator-pack:1.0.0'
+    compile 'com.opentok.android:accelerator-pack:+'
     compile 'com.opentok.android:opentok-solutions-logging:1.0.0'
 }
