--- a/ios/OneToOneScreenShareSample/Podfile
+++ b/ios/OneToOneScreenShareSample/Podfile
@@ -1,11 +1,6 @@
-
-source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
-inhibit_all_warnings!
 
 target 'OneToOneScreenShareSample' do
-  pod 'OpenTok'
-  pod 'OTAcceleratorPackUtil'
+  pod 'OTScreenShareKit'
   pod 'SVProgressHUD'
-  pod 'LHToolbar', '1.2.1-beta'
 end
