--- a/ios/ScreenShareAccPackKit/Podfile
+++ b/ios/ScreenShareAccPackKit/Podfile
@@ -2,7 +2,7 @@ platform :ios, '8.0'
 
 target 'OTScreenShareKit' do
   pod 'OTAcceleratorPackUtil'
-  pod 'LHToolbar', '1.2.1-beta'
+  pod 'OTAnnotationKit'
 end
 
 target 'OTScreenShareKitTests' do
