Fixing android logging version

--- a/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
+++ b/android/TextChatAccPackKit/text-chat-acc-pack-kit/build.gradle
@@ -109,5 +109,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.+'
     compile 'com.opentok.android:accelerator-pack:+'
-    compile 'com.opentok.android:opentok-solutions-logging:1.0.0'
+    compile 'com.opentok.android:opentok-solutions-logging:+'
 }
