Update npm keywords.

--- a/js/opentok.js-annotations/package.json
+++ b/js/opentok.js-annotations/package.json
@@ -11,7 +11,10 @@
   },
   "keywords": [
     "opentok",
-    "annotations"
+    "annotation",
+    "annotations",
+    "opentok-acc-pack",
+    "screen-sharing"
   ],
   "author": "Salvador de la Puente <salva@unoyunodiez.com>",
   "license": "MIT",
