Don't create zip as part of build process.

--- a/js/opentok.js-annotations/package.json
+++ b/js/opentok.js-annotations/package.json
@@ -16,7 +16,7 @@
     "opentok-acc-pack",
     "screen-sharing"
   ],
-  "author": "Salvador de la Puente <salva@unoyunodiez.com>",
+  "author": "adrice727@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
