--- a/ios/OneToOneScreenShareSample/Podfile
+++ b/ios/OneToOneScreenShareSample/Podfile
@@ -1,6 +1,6 @@
 platform :ios, '8.0'
 
 target 'OneToOneScreenShareSample' do
-  pod 'OTScreenShareKit'
+  pod 'OTScreenShareKit', '~> 1.0.0'
   pod 'SVProgressHUD'
 end
