--- a/js/opentok.js-annotations/package.json
+++ b/js/opentok.js-annotations/package.json
@@ -19,6 +19,10 @@
   ],
   "author": "adrice727@gmail.com",
   "license": "MIT",
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/opentok/annotation-acc-pack/tree/1.0.0/js"
+  },
   "devDependencies": {
     "chai": "^3.3.0",
     "gulp": "^3.9.0",
