--- a/js/opentok.js-text-chat/package.json
+++ b/js/opentok.js-text-chat/package.json
@@ -1,13 +1,17 @@
 {
   "name": "opentok-text-chat",
-  "version": "0.1.0",
-  "description": "A text chat component for OpenTok",
+  "version": "1.0.3",
+  "description": "OpenTok text chat accelerator pack",
   "main": "dist/opentok-text-chat.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/opentok/textchat-acc-pack/tree/1.0.0/js"
   },
   "keywords": [
     "opentok",
