--- a/js/opentok.js-annotations/package.json
+++ b/js/opentok.js-annotations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opentok-annotation",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "OpenTok annotation accelerator pack",
   "main": "dist/opentok-annotation.js",
   "directories": {
@@ -33,6 +33,7 @@
     "gulp-if": "^2.0.0",
     "gulp-import-css": "^0.1.2",
     "gulp-inline-css": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
     "gulp-yuidoc": "^0.1.2",
@@ -44,6 +45,7 @@
     "karma-mocha": "^0.2.0",
     "karma-requirejs": "^0.2.2",
     "karma-sinon": "^1.0.4",
+    "merge-stream": "^1.0.0",
     "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.0",
