--- a/js/opentok.js-text-chat/.gitignore
+++ b/js/opentok.js-text-chat/.gitignore
@@ -2,6 +2,7 @@ node_modules
 .idea/
 dist/*
 !dist/opentok-text-chat.js
+!dist/opentok-text-chat.min.js
 src/opentok-one-to-one-communication.js
 src/opentok-solutions-logging.js
 
