--- a/JS/opentok.js-ss-annotation/package.json
+++ b/JS/opentok.js-ss-annotation/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "opentok-text-chat",
+  "name": "opentok-screensharing-annotation-sample-app",
   "version": "0.1.0",
-  "description": "A text chat component for OpenTok",
-  "main": "dist/opentok-textchat.js",
+  "description": "Screen sharing with annotation sample application",
+  "main": "dist/screenshare-annotation-acc-pack.js",
   "directories": {
     "test": "test"
   },
@@ -23,16 +23,16 @@
     "gulp-amd-optimizer": "^0.3.4",
     "gulp-amdclean": "^1.1.1",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "2.3.0",
     "gulp-docco": "0.0.4",
     "gulp-if": "^2.0.0",
     "gulp-import-css": "^0.1.2",
     "gulp-inline-css": "^3.1.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-unzip": "^0.1.4",
     "gulp-webserver": "^0.9.1",
     "gulp-yuidoc": "^0.1.2",
     "gulp-zip": "^3.2.0",
-    "gulp-unzip":"^0.1.4", 
-    "gulp-concat-css":"2.3.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -41,6 +41,10 @@
     "karma-requirejs": "^0.2.2",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.3.3",
+    "opentok-annotation": "^1.0.4",
+    "opentok-one-to-one-communication": "^1.0.8",
+    "opentok-screen-sharing": "^1.0.1",
+    "opentok-solutions-logging": "^1.0.2",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.0",
     "yuidocjs": "^0.9.0"
