--- a/js/.eslintrc.json
+++ b/js/.eslintrc.json
@@ -14,7 +14,9 @@
         "prefer-arrow-callback": 0,
         "object-shorthand": 0,
         "new-cap": [2, { "properties": false }],
-        "no-unused-expressions": [2, { "allowTernary": true, "allowShortCircuit": true }]
+        "no-unused-expressions": [2, { "allowTernary": true, "allowShortCircuit": true }],
+        "comma-dangle": 0,
+        "vars-on-top": 0
     },
     "globals": {
         "$": true,
