--- a/ios/OneToOneScreenShareSample/Podfile
+++ b/ios/OneToOneScreenShareSample/Podfile
@@ -2,5 +2,6 @@ platform :ios, '8.0'
 
 target 'OneToOneScreenShareSample' do
   pod 'OTScreenShareKit', '~> 1.0.0'
+  pod 'OTAnnotationKit', '~> 1.0.0'
   pod 'SVProgressHUD'
 end
