--- a/js/opentok.js-screen-sharing/package.json
+++ b/js/opentok.js-screen-sharing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opentok-screen-sharing",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "OpenTok screen sharing accelerator pack",
   "main": "dist/opentok-screen-sharing.js",
   "directories": {
@@ -8,6 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "babel": {
+    "stage": "1"
   },
   "keywords": [
     "opentok",
@@ -35,5 +38,10 @@
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.0",
+    "opentok-solutions-logging": "^1.0.6",
+    "underscore": "^1.8.3"
   }
 }
