--- a/ios/TextChatAccPackKit/Podfile
+++ b/ios/TextChatAccPackKit/Podfile
@@ -1,11 +1,11 @@
 platform :ios, '8.0'
 
 target 'OTTextChatKit' do 
-  pod 'OTAcceleratorPackUtil', '~> 1.0.0'
+  pod 'OTAcceleratorPackUtil'
 end
 
 target 'OTTextChatKitStatic' do 
-  pod 'OTAcceleratorPackUtil', '~> 1.0.0'
+  pod 'OTAcceleratorPackUtil'
 end
 
 target 'OTTextChatKitTests' do 
