Fixes + reconnections callbacks (#42)
* Fixing android camera api (#39)

* Merge branch 'master' of https://github.com/opentok/acc-pack-common

* 'master' of https://github.com/opentok/acc-pack-common:
  Fixing android camera api (#39) (#40)
  Fixing android camera api
  update to use OpenTok 2.9.0 SDK; fix a minor bug;
  Adding changes to manage the cameraId (#37)

# Conflicts:
#	android/android-accelerator-pack/acceleratorpack/build.gradle

* add documentation; remove redundant opentok credential setter;

* Fixed `publishAudio`, `publishVideo`, `subscribeAudio` and `subscribeVideo` do not get updated.

* Enhance documentation and remove connection related methods

* Adding reconnections callbacks (#41)

--- a/ios/OTAcceleratorPackUtilProject/Podfile
+++ b/ios/OTAcceleratorPackUtilProject/Podfile
@@ -1,9 +1,9 @@
 
 target 'OTAcceleratorPackUtilProject' do
-  pod 'OpenTok', '~> 2.8.3'
+  pod 'OTAcceleratorPackUtil', :path => './'
 end
 
 target 'OTAcceleratorPackUtil' do 
-  pod 'OpenTok', '~> 2.8.3'
+  pod 'OpenTok', '~> 2.9.0'
   pod 'OTKAnalytics'
 end
