--- a/ios/ScreenShareAccPackKit/Podfile
+++ b/ios/ScreenShareAccPackKit/Podfile
@@ -1,13 +1,17 @@
 platform :ios, '8.0'
 
+target 'OTScreenShareAccPackKit' do
+    pod 'OTAcceleratorPackUtil'
+end
+
 target 'OTScreenShareKit' do
-  pod 'OTAcceleratorPackUtil'
+    pod 'OTAcceleratorPackUtil'
 end
 
 target 'OTScreenShareKitStatic' do
-  pod 'OTAcceleratorPackUtil'
+    pod 'OTAcceleratorPackUtil'
 end
 
 target 'OTScreenShareKitTests' do
-  pod 'Kiwi'
+    pod 'Kiwi'
 end
