--- a/ios/OTAcceleratorPackUtilProject/Podfile
+++ b/ios/OTAcceleratorPackUtilProject/Podfile
@@ -1,6 +1,6 @@
 project 'OTAcceleratorPackUtil.xcodeproj'
 
 target 'OTAcceleratorPackUtil' do 
-  pod 'OpenTok', '~> 2.9.2'
+  pod 'OpenTok'
   pod 'OTKAnalytics'
 end
