--- a/android/android-accelerator-pack/acceleratorpack/build.gradle
+++ b/android/android-accelerator-pack/acceleratorpack/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         project.archivesBaseName = "opentok-android-accelerator-pack"
-        project.version = "1.0.14"
+        project.version = "1.0.12"
     }
     buildTypes {
         release {
@@ -32,9 +32,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.+'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     testCompile 'junit:junit:4.+'
-    compile 'com.opentok.android:opentok-android-sdk:2.10.+'
+    compile 'com.opentok.android:opentok-android-sdk:2.9.+'
     compile 'com.opentok.android:opentok-solutions-logging:+'
 }
 
